chore: otimizações e integração da classe util constants e validation