@@ -7,8 +7,8 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
@@ -17,10 +17,8 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.localibrary.util.Constants.JWT_HEADER;
-import static com.localibrary.util.Constants.JWT_PREFIX;
+import static com.localibrary.util.Constants.*;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -36,39 +34,33 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             String jwt = getJwtFromRequest(request);
 
             if (StringUtils.hasText(jwt) && jwtTokenService.validateToken(jwt)) {
-                // Extrai os claims (dados) do token
                 Claims claims = jwtTokenService.extractAllClaims(jwt);
+
                 String email = claims.getSubject();
-                String roles = (String) claims.get("roles");
-                Long id = ((Number) claims.get("id")).longValue();
+                Long id = ((Number) claims.get(JWT_CLAIM_ID)).longValue(); // Usa constante "id"
+                String rolesString = (String) claims.get(JWT_CLAIM_ROLE);
 
-                // Converte as roles (ex: "ROLE_ADMIN,ROLE_USER") para uma Lista de GrantedAuthority
-                List<SimpleGrantedAuthority> authorities = Arrays.stream(roles.split(","))
-                        .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+                if (rolesString != null) {
+                    List<SimpleGrantedAuthority> authorities = Arrays.stream(rolesString.split(","))
+                            .map(SimpleGrantedAuthority::new).toList();
 
-                // Cria o objeto de autenticação
-                // Guardamos o ID no "principal" para fácil acesso nos controllers
-                UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
-                        id, // Agora o principal é o ID, não o UserDetails
-                        null,
-                        authorities
-                );
+                    UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                            id,
+                            null,
+                            authorities
+                    );
 
-                authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-
-                // Seta o usuário como autenticado no contexto de segurança
-                SecurityContextHolder.getContext().setAuthentication(authentication);
+                    authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                    SecurityContextHolder.getContext().setAuthentication(authentication);
+                }
             }
         } catch (Exception ex) {
-            // Logar falha na autenticação
             logger.error("Não foi possível setar a autenticação do usuário", ex);
         }
 
         filterChain.doFilter(request, response);
     }
 
-    // Método helper para pegar o "Bearer <token>" do header
     private String getJwtFromRequest(HttpServletRequest request) {
         String bearerToken = request.getHeader(JWT_HEADER); // "Authorization"
         if (StringUtils.hasText(bearerToken) && bearerToken.startsWith(JWT_PREFIX)) { // "Bearer "
